# GluCore

./: .gitignore  Cargo.toml  EZ_TO_GLUCORE.md  KNOWN_FOOTGUNS.md  README.md  build.sh  glucore.py  glucore.toml  main.py  shell.nix
adapters/cpp/: conanfile.py
adapters/cpp/include/: glucore_export.hpp
adapters/java/: pom.xml
adapters/java/src/main/java/glucore/: GcPin.java  GluAdapter.java  GluTypes.java
adapters/python/: README.md  __init__.py  adapter.py  bindings.py  gc_pin.py  glu_types.py  pyproject.toml
adapters/rust/: Cargo.toml
adapters/rust/src/: lib.rs
core/: Cargo.toml
core/include/: glucore.h
core/src/: errors.rs  fctp.rs  handles.rs  lib.rs  router.rs  runtime.rs  trace.rs  transport.rs  types.rs
docs/: 01-architecture.md  02-type-system.md  03-wire-protocol.md  04-adapter-authoring.md  05-link-enforcement.md  06-ipc-transport.md  07-performance.md  08-known-footguns.md  09-api-reference.md  10-examples.md  README.md
examples/cpp_engine/: CMakeLists.txt
examples/cpp_engine/src/: engine.cpp
examples/java_renderer/src/main/java/: Renderer.java
examples/physics/: Cargo.toml
examples/physics/src/: lib.rs
scripts/: bench_final.py  bench_glucore.py  bench_raw.py  profile_bench.py
tests/integration/: part0a_dod.py  part0b_dod.py  task5_dod.py  task7_multicaller_dod.py
tests/interop/: java_smoke.py  part0c_dod.py  task10_dod.py  task9_dod.py
tests/unit/: task1_dod.py  task3_dod.py  task4_dod.py  task6a_dod.py
