[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "glucore"
version = "0.2.0"
description = "Python adapter for GluCore — a language-agnostic runtime coordination layer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dead-down-studio"},
    {name = " RedLeZ"}
]
keywords = ["ffi", "ipc", "cross-language", "runtime", "adapter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/dead-down-studio/glucore"
Documentation = "https://github.com/Dead-down-studio/glucore/tree/main/docs"
Repository = "https://github.com/Dead-down-studio/glucore"

[tool.setuptools]
packages = ["glucore"]

[tool.setuptools.package-dir]
glucore = "."

[tool.setuptools.package-data]
glucore = ["*.py"]
