[package]
name = "glucore_macro"
version = "0.2.0"
edition = "2021"
description = "Proc-macro for GluCore — #[glucore::export] auto-registers Rust functions"
license = "MIT"
repository = "https://github.com/Dead-down-studio/glucore"
homepage = "https://github.com/Dead-down-studio/glucore"
keywords = ["ffi", "glucore", "proc-macro", "code-generation"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
